--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
             </div>
         </div>
         </nav>
+<!----navbar end------>
+
+<!-----hero section----->
 
     <section class="max-w-6xl mx-auto">
         <div class="mt-10 lg:mx-auto">
@@ -314,7 +317,7 @@
   </section>
   <!-----design section----->
 
-  <!-----portfolio section---->
+  <!-------portfolio section------>
   <div class="lg:bg-white">
     <section class="container mx-auto bg-[#f4f4f4] lg:bg-transparent pb-[100px] ">
       <div class="container mx-auto lg:pt-[100px] justify-center items-center">
@@ -341,7 +344,7 @@
         </div>
       </div>
       
-      <!-------dekstop portion------>
+      <!-------Dekstop portion------>
       <div class="container mx-auto flex justify-center items-center lg:flex hidden mt-8">
         <div class="w-[772px] h-[227.30px] p-6 bg-white rounded-2xl border border-[#e9e9e9] justify-start items-center gap-2.5 inline-flex">
           <div class="grow shrink basis-0 h-[179.30px] justify-start items-center gap-6 flex">
@@ -489,7 +492,7 @@
   </div>
       <!-------tablet portion------->
   
-      <!-----mobile portion----->
+      <!--------mobile portion--------->
       <div class="flex md:hidden lg:hidden h-[462.20px] p-6 bg-white rounded-2xl border border-[#e9e9e9] flex-col justify-center items-start gap-2.5 inline-flex">
         <div class="self-stretch h-[414.20px] flex-col justify-center items-start gap-6 flex">
             <img class="self-stretch h-[191px] rounded-2xl" src="./assets/img1.png" />
