--- a/index.html
+++ b/index.html
@@ -141,13 +141,14 @@
 
       <div class="card-body">
         <div
-          class="h-[38.03px] w-[135px] px-4 py-2 bg-white rounded-3xl flex-col justify-start items-start gap-2.5 inline-flex">
-          <div class="flex justify-start items-center gap-2 sm:justify-center md:justify-center w-full">
+          class="h-[38.03px] w-[135px] px-4 py-2 bg-white rounded-3xl flex-col justify-start items-start gap-2.5 sm:justify-center md:justify-center inline-flex">
+          <div class="flex justify-start items-center gap-2 w-full">
             <div class="origin-top-left w-3 h-3 relative">
               <img src="./assets/arrow.svg" alt="Arrow">
             </div>
             <div class="text-[#494949] text-base font-bold font-['Manrope']">About Us</div>
           </div>
+          
           
         </div>
         <div class="hidden lg:block w-[477.30px] text-[#212121] text-[40px] font-bold font-['Manrope']">
